OpParser/OParser.cpp

// Generated from /media/loki/Niflheim/Tesis/github/Chisel3/OpParser/OParser.g4 by ANTLR 4.7


#include "OParserListener.h"
#include "OParserVisitor.h"

#include "OParser.h"


using namespace antlrcpp;
using namespace OpLanguage;
using namespace antlr4;

OParser::OParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

OParser::~OParser() {
  delete _interpreter;
}

std::string OParser::getGrammarFileName() const {
  return "OParser.g4";
}

const std::vector<std::string>& OParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& OParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- ProgramContext ------------------------------------------------------------------

OParser::ProgramContext::ProgramContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

OParser::DefsContext* OParser::ProgramContext::defs() {
  return getRuleContext<OParser::DefsContext>(0);
}


size_t OParser::ProgramContext::getRuleIndex() const {
  return OParser::RuleProgram;
}

void OParser::ProgramContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterProgram(this);
}

void OParser::ProgramContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitProgram(this);
}


antlrcpp::Any OParser::ProgramContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitProgram(this);
  else
    return visitor->visitChildren(this);
}

OParser::ProgramContext* OParser::program() {
  ProgramContext *_localctx = _tracker.createInstance<ProgramContext>(_ctx, getState());
  enterRule(_localctx, 0, OParser::RuleProgram);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(16);
    defs();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefsContext ------------------------------------------------------------------

OParser::DefsContext::DefsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<OParser::DefContext *> OParser::DefsContext::def() {
  return getRuleContexts<OParser::DefContext>();
}

OParser::DefContext* OParser::DefsContext::def(size_t i) {
  return getRuleContext<OParser::DefContext>(i);
}


size_t OParser::DefsContext::getRuleIndex() const {
  return OParser::RuleDefs;
}

void OParser::DefsContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDefs(this);
}

void OParser::DefsContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDefs(this);
}


antlrcpp::Any OParser::DefsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitDefs(this);
  else
    return visitor->visitChildren(this);
}

OParser::DefsContext* OParser::defs() {
  DefsContext *_localctx = _tracker.createInstance<DefsContext>(_ctx, getState());
  enterRule(_localctx, 2, OParser::RuleDefs);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(18);
    def();
    setState(23);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        setState(19);
        match(OParser::SEMICOLON);
        setState(20);
        def(); 
      }
      setState(25);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 0, _ctx);
    }
    setState(27);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == OParser::SEMICOLON) {
      setState(26);
      match(OParser::SEMICOLON);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DefContext ------------------------------------------------------------------

OParser::DefContext::DefContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* OParser::DefContext::STRING() {
  return getToken(OParser::STRING, 0);
}

OParser::ExprContext* OParser::DefContext::expr() {
  return getRuleContext<OParser::ExprContext>(0);
}

std::vector<tree::TerminalNode *> OParser::DefContext::NAME() {
  return getTokens(OParser::NAME);
}

tree::TerminalNode* OParser::DefContext::NAME(size_t i) {
  return getToken(OParser::NAME, i);
}


size_t OParser::DefContext::getRuleIndex() const {
  return OParser::RuleDef;
}

void OParser::DefContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterDef(this);
}

void OParser::DefContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitDef(this);
}


antlrcpp::Any OParser::DefContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitDef(this);
  else
    return visitor->visitChildren(this);
}

OParser::DefContext* OParser::def() {
  DefContext *_localctx = _tracker.createInstance<DefContext>(_ctx, getState());
  enterRule(_localctx, 4, OParser::RuleDef);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(39);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OParser::STRING: {
        enterOuterAlt(_localctx, 1);
        setState(29);
        match(OParser::STRING);
        setState(30);
        match(OParser::ASSIGN);
        setState(31);
        expr(0);
        break;
      }

      case OParser::NAME: {
        enterOuterAlt(_localctx, 2);
        setState(32);
        match(OParser::NAME);
        setState(35);
        _errHandler->sync(this);

        _la = _input->LA(1);
        if (_la == OParser::SHARP) {
          setState(33);
          match(OParser::SHARP);
          setState(34);
          match(OParser::NAME);
        }
        setState(37);
        match(OParser::ASSIGN);
        setState(38);
        expr(0);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ExprContext ------------------------------------------------------------------

OParser::ExprContext::ExprContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}


size_t OParser::ExprContext::getRuleIndex() const {
  return OParser::RuleExpr;
}

void OParser::ExprContext::copyFrom(ExprContext *ctx) {
  ParserRuleContext::copyFrom(ctx);
}

//----------------- LogAndExpContext ------------------------------------------------------------------

std::vector<OParser::ExprContext *> OParser::LogAndExpContext::expr() {
  return getRuleContexts<OParser::ExprContext>();
}

OParser::ExprContext* OParser::LogAndExpContext::expr(size_t i) {
  return getRuleContext<OParser::ExprContext>(i);
}

OParser::LogAndExpContext::LogAndExpContext(ExprContext *ctx) { copyFrom(ctx); }

void OParser::LogAndExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogAndExp(this);
}
void OParser::LogAndExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogAndExp(this);
}

antlrcpp::Any OParser::LogAndExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitLogAndExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- UnitaryExpContext ------------------------------------------------------------------

OParser::UnitaryOpContext* OParser::UnitaryExpContext::unitaryOp() {
  return getRuleContext<OParser::UnitaryOpContext>(0);
}

OParser::ExprContext* OParser::UnitaryExpContext::expr() {
  return getRuleContext<OParser::ExprContext>(0);
}

OParser::UnitaryExpContext::UnitaryExpContext(ExprContext *ctx) { copyFrom(ctx); }

void OParser::UnitaryExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterUnitaryExp(this);
}
void OParser::UnitaryExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitUnitaryExp(this);
}

antlrcpp::Any OParser::UnitaryExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitUnitaryExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ShiftExpContext ------------------------------------------------------------------

std::vector<OParser::ExprContext *> OParser::ShiftExpContext::expr() {
  return getRuleContexts<OParser::ExprContext>();
}

OParser::ExprContext* OParser::ShiftExpContext::expr(size_t i) {
  return getRuleContext<OParser::ExprContext>(i);
}

OParser::ShiftExpContext::ShiftExpContext(ExprContext *ctx) { copyFrom(ctx); }

void OParser::ShiftExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterShiftExp(this);
}
void OParser::ShiftExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitShiftExp(this);
}

antlrcpp::Any OParser::ShiftExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitShiftExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- CondExpContext ------------------------------------------------------------------

std::vector<OParser::ExprContext *> OParser::CondExpContext::expr() {
  return getRuleContexts<OParser::ExprContext>();
}

OParser::ExprContext* OParser::CondExpContext::expr(size_t i) {
  return getRuleContext<OParser::ExprContext>(i);
}

OParser::CondExpContext::CondExpContext(ExprContext *ctx) { copyFrom(ctx); }

void OParser::CondExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterCondExp(this);
}
void OParser::CondExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitCondExp(this);
}

antlrcpp::Any OParser::CondExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitCondExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- LogOrExpContext ------------------------------------------------------------------

std::vector<OParser::ExprContext *> OParser::LogOrExpContext::expr() {
  return getRuleContexts<OParser::ExprContext>();
}

OParser::ExprContext* OParser::LogOrExpContext::expr(size_t i) {
  return getRuleContext<OParser::ExprContext>(i);
}

OParser::LogOrExpContext::LogOrExpContext(ExprContext *ctx) { copyFrom(ctx); }

void OParser::LogOrExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterLogOrExp(this);
}
void OParser::LogOrExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitLogOrExp(this);
}

antlrcpp::Any OParser::LogOrExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitLogOrExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ParExpContext ------------------------------------------------------------------

OParser::ExprContext* OParser::ParExpContext::expr() {
  return getRuleContext<OParser::ExprContext>(0);
}

OParser::ParExpContext::ParExpContext(ExprContext *ctx) { copyFrom(ctx); }

void OParser::ParExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterParExp(this);
}
void OParser::ParExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitParExp(this);
}

antlrcpp::Any OParser::ParExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitParExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BinaryOpExpContext ------------------------------------------------------------------

std::vector<OParser::ExprContext *> OParser::BinaryOpExpContext::expr() {
  return getRuleContexts<OParser::ExprContext>();
}

OParser::ExprContext* OParser::BinaryOpExpContext::expr(size_t i) {
  return getRuleContext<OParser::ExprContext>(i);
}

OParser::BinaryOpExpContext::BinaryOpExpContext(ExprContext *ctx) { copyFrom(ctx); }

void OParser::BinaryOpExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBinaryOpExp(this);
}
void OParser::BinaryOpExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBinaryOpExp(this);
}

antlrcpp::Any OParser::BinaryOpExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitBinaryOpExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ConstantExpContext ------------------------------------------------------------------

OParser::ConstantContext* OParser::ConstantExpContext::constant() {
  return getRuleContext<OParser::ConstantContext>(0);
}

OParser::ConstantExpContext::ConstantExpContext(ExprContext *ctx) { copyFrom(ctx); }

void OParser::ConstantExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterConstantExp(this);
}
void OParser::ConstantExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitConstantExp(this);
}

antlrcpp::Any OParser::ConstantExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitConstantExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- ExponentialExpContext ------------------------------------------------------------------

std::vector<OParser::ExprContext *> OParser::ExponentialExpContext::expr() {
  return getRuleContexts<OParser::ExprContext>();
}

OParser::ExprContext* OParser::ExponentialExpContext::expr(size_t i) {
  return getRuleContext<OParser::ExprContext>(i);
}

OParser::ExponentialExpContext::ExponentialExpContext(ExprContext *ctx) { copyFrom(ctx); }

void OParser::ExponentialExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterExponentialExp(this);
}
void OParser::ExponentialExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitExponentialExp(this);
}

antlrcpp::Any OParser::ExponentialExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitExponentialExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- FunctionExpContext ------------------------------------------------------------------

OParser::FunctionContext* OParser::FunctionExpContext::function() {
  return getRuleContext<OParser::FunctionContext>(0);
}

OParser::FunctionExpContext::FunctionExpContext(ExprContext *ctx) { copyFrom(ctx); }

void OParser::FunctionExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterFunctionExp(this);
}
void OParser::FunctionExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitFunctionExp(this);
}

antlrcpp::Any OParser::FunctionExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitFunctionExp(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BinLogOpExpContext ------------------------------------------------------------------

std::vector<OParser::ExprContext *> OParser::BinLogOpExpContext::expr() {
  return getRuleContexts<OParser::ExprContext>();
}

OParser::ExprContext* OParser::BinLogOpExpContext::expr(size_t i) {
  return getRuleContext<OParser::ExprContext>(i);
}

OParser::BinLogOpExpContext::BinLogOpExpContext(ExprContext *ctx) { copyFrom(ctx); }

void OParser::BinLogOpExpContext::enterRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->enterBinLogOpExp(this);
}
void OParser::BinLogOpExpContext::exitRule(tree::ParseTreeListener *listener) {
  auto parserListener = dynamic_cast<OParserListener *>(listener);
  if (parserListener != nullptr)
    parserListener->exitBinLogOpExp(this);
}

antlrcpp::Any OParser::BinLogOpExpContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<OParserVisitor*>(visitor))
    return parserVisitor->visitBinLogOpExp(this);
  else
    return visitor->visitChildren(this);
}

OParser::ExprContext* OParser::expr() {
   return expr(0);
}

OParser::ExprContext* OParser::expr(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  OParser::ExprContext *_localctx = _tracker.createInstance<ExprContext>(_ctx, parentState);
  OParser::ExprContext *previousContext = _localctx;
  size_t startState = 6;
  enterRecursionRule(_localctx, 6, OParser::RuleExpr, precedence);

    size_t _la = 0;

  auto onExit = finally([=] {
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(51);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case OParser::OPENPAR: {
        _localctx = _tracker.createInstance<ParExpContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(42);
        match(OParser::OPENPAR);
        setState(43);
        expr(0);
        setState(44);
        match(OParser::CLOSEPAR);
        break;
      }

      case OParser::ABS:
      case OParser::ACOS:
      case OParser::ASIN:
      case OParser::ATAN:
      case OParser::CEIL:
      case OParser::COS:
      case OParser::DOUBLECAST:
      case OParser::EVAL:
      case OParser::EXPFUNC:
      case OParser::FLOATCAST:
      case OParser::FLOOR:
      case OParser::GRAPH:
      case OParser::GRAPH2:
      case OParser::IF:
      case OParser::INTCAST:
      case OParser::ISNULL:
      case OParser::LOG:
      case OParser::MAX:
      case OParser::MEDIAN:
      case OParser::MIN:
      case OParser::MODE:
      case OParser::NMAX:
      case OParser::NMEDIAN:
      case OParser::NMIN:
      case OParser::NMODE:
      case OParser::NOT:
      case OParser::POW:
      case OParser::RAND:
      case OParser::ROUND:
      case OParser::SIN:
      case OParser::SQRT:
      case OParser::TAN:
      case OParser::XOR:
      case OParser::NULLV:
      case OParser::SQL: {
        _localctx = _tracker.createInstance<FunctionExpContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(46);
        function();
        break;
      }

      case OParser::FLOAT:
      case OParser::DOUBLE:
      case OParser::INT:
      case OParser::NAME:
      case OParser::STRING: {
        _localctx = _tracker.createInstance<ConstantExpContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(47);
        constant();
        break;
      }

      case OParser::NEGSUB:
      case OParser::COMPLEMENT:
      case OParser::LNOT: {
        _localctx = _tracker.createInstance<UnitaryExpContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(48);
        unitaryOp();
        setState(49);
        expr(12);
        break;
      }

    default:
      throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(91);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty())
          triggerExitRuleEvent();
        previousContext = _localctx;
        setState(89);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
        case 1: {
          auto newContext = _tracker.createInstance<ExponentialExpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(53);

          if (!(precpred(_ctx, 11))) throw FailedPredicateException(this, "precpred(_ctx, 11)");
          setState(54);
          match(OParser::EXPONENT);
          setState(55);
          expr(12);
          break;
        }

        case 2: {
          auto newContext = _tracker.createInstance<BinaryOpExpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(56);

          if (!(precpred(_ctx, 10))) throw FailedPredicateException(this, "precpred(_ctx, 10)");
          setState(57);
          dynamic_cast<BinaryOpExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << OParser::MODULUS)
            | (1ULL << OParser::DIV)
            | (1ULL << OParser::MULT))) != 0))) {
            dynamic_cast<BinaryOpExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(58);
          expr(11);
          break;
        }

        case 3: {
          auto newContext = _tracker.createInstance<BinaryOpExpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(59);

          if (!(precpred(_ctx, 9))) throw FailedPredicateException(this, "precpred(_ctx, 9)");
          setState(60);
          dynamic_cast<BinaryOpExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == OParser::NEGSUB

          || _la == OParser::ADD)) {
            dynamic_cast<BinaryOpExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(61);
          expr(10);
          break;
        }

        case 4: {
          auto newContext = _tracker.createInstance<ShiftExpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(62);

          if (!(precpred(_ctx, 8))) throw FailedPredicateException(this, "precpred(_ctx, 8)");
          setState(63);
          dynamic_cast<ShiftExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << OParser::LSHIFT)
            | (1ULL << OParser::RSHIFT)
            | (1ULL << OParser::RSHIFTU))) != 0))) {
            dynamic_cast<ShiftExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(64);
          expr(9);
          break;
        }

        case 5: {
          auto newContext = _tracker.createInstance<BinLogOpExpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(65);

          if (!(precpred(_ctx, 7))) throw FailedPredicateException(this, "precpred(_ctx, 7)");
          setState(66);
          dynamic_cast<BinLogOpExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!((((_la & ~ 0x3fULL) == 0) &&
            ((1ULL << _la) & ((1ULL << OParser::GREATER)
            | (1ULL << OParser::GREATEREQUAL)
            | (1ULL << OParser::LESS)
            | (1ULL << OParser::LESSEQUEAL))) != 0))) {
            dynamic_cast<BinLogOpExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(67);
          expr(8);
          break;
        }

        case 6: {
          auto newContext = _tracker.createInstance<BinLogOpExpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(68);

          if (!(precpred(_ctx, 6))) throw FailedPredicateException(this, "precpred(_ctx, 6)");
          setState(69);
          dynamic_cast<BinLogOpExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == OParser::EQUAL

          || _la == OParser::NEQUAL)) {
            dynamic_cast<BinLogOpExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(70);
          expr(7);
          break;
        }

        case 7: {
          auto newContext = _tracker.createInstance<BinaryOpExpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(71);

          if (!(precpred(_ctx, 5))) throw FailedPredicateException(this, "precpred(_ctx, 5)");
          setState(72);
          match(OParser::BITAND);
          setState(73);
          expr(6);
          break;
        }

        case 8: {
          auto newContext = _tracker.createInstance<BinaryOpExpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(74);

          if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
          setState(75);
          match(OParser::BITOR);
          setState(76);
          expr(5);
          break;
        }

        case 9: {
          auto newContext = _tracker.createInstance<LogAndExpContext>(_tracker.createInstance<ExprContext>(parentContext, parentState));
          _localctx = newContext;
          pushNewRecursionContext(newContext, startState, RuleExpr);
          setState(77);

          if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
          setState(78);
          dynamic_cast<LogAndExpContext *>(_localctx)->op = _input->LT(1);
          _la = _input->LA(1);
          if (!(_la == OParser::LAND

          || _la == OParser::LANDONE)) {
            dynamic_cast<LogAndExpContext *>(_localctx)->op = _errHandler->recoverInline(this);
          }
          else {
            _errHandler->reportMatch(this);
            consume();
          }
          setState(79);
          expr(4);
          break;
        }
